<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_barber_scissors"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_barbershop"
            android:title="@string/menuAdmin_1" />
    </group>

<!--    <group-->
<!--        android:id="@+id/group1"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_3"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_3" />-->
<!--    </group>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/ic_wrong"
            android:title="@string/menu_4" />

<!--        <item-->
<!--            android:id="@+id/nav_5"-->
<!--            android:icon="@drawable/ic_menu_send"-->
<!--            android:title="@string/menu_5" />-->
    </group>


</menu>