<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="190dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/nombrePelu" />

        <EditText
            android:id="@+id/eTxtNombre"
            android:layout_width="321dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="190dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/lugarPelu" />

        <EditText
            android:id="@+id/eTxtLugar"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:padding="3dp" />

        <Button
            android:id="@+id/BtnGuardarPelu"
            android:layout_width="178dp"
            android:layout_height="33dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/ButtonRegPelu"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>