<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="105dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"

            android:text="@string/TxtRaza" />

        <EditText
            android:id="@+id/editTextRaza"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/TxtServicio" />

        <Spinner
            android:id="@+id/spinnerServicio"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape"
            android:padding="3dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/TxtOtros" />

        <EditText
            android:id="@+id/editTextOtros"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"

            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:minLines="6"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="" />
        <!--            android:inputType="textPersonName"-->

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="140dp"
            android:layout_height="32dp"

            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/Next"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>